syntax = "proto3";

package post;

message UpdatePostRequest {
  string id = 1;
  optional string title = 2;
  optional string content = 3;
  optional string category = 4;
  optional string image = 5;
  optional bool published = 6;
}